--- a/main.css
+++ b/main.css
@@ -175,7 +175,7 @@
     justify-content: center;
   }
 }
-@media (min-width: 1230px) {
+@media (max-width: 1230px) {
   .dashboard {
     display: grid;
     grid-template-columns: auto auto;
